methods.returning.MethodsReturning.scala.code
var vuBiscuit : Boolean = false

def haveBaggle():Boolean = {

  
  return
}